--- a/src/Styles/SessionInfo.css
+++ b/src/Styles/SessionInfo.css
@@ -3,7 +3,7 @@
   position: relative;
   align-items: center;
   justify-content: space-between;
-  height: auto;
+  height: 80px;
   width: 100vw;
   background-color: #c1cbed;
 }
